--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
 
+    <section class="task-one">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    </section>
+
+    <section class="task-two"></section>
+
+<section>
+    <img class="task-three" src="/assets/smiley.jpg">
+</section>
+
 </body>
 </html>
+
